--- a/news.css
+++ b/news.css
@@ -3,3 +3,27 @@ body {
     margin: 0;
     box-sizing: border-box;
 }
+
+#search-bar {
+    position: relative;
+    /* width: ; */
+    margin: 30px;
+    height: 40px;
+}   
+#search-bar input {
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+    padding-left: 10px;
+}
+
+#search-bar input::placeholder {
+    font-size: 20px;
+    padding-left: 10px;
+}
+#search-bar i {
+    position: absolute;
+    top: 10px;
+    left: 94%;
+    font-size: 24px;
+}
