--- a/news.css
+++ b/news.css
@@ -27,3 +27,24 @@ body {
     left: 94%;
     font-size: 24px;
 }
+
+#main p {
+    margin: 30px;
+    font-size: 22px;
+}
+
+.main-button {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-left: 40px;
+}
+
+.button {
+    padding: 8px 20px;
+    min-width: 80px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+}
