--- a/news.css
+++ b/news.css
@@ -9,7 +9,8 @@ body {
     /* width: ; */
     margin: 30px;
     height: 40px;
-}   
+} 
+
 #search-bar input {
     width: 100%;
     height: 100%;
@@ -21,6 +22,7 @@ body {
     font-size: 20px;
     padding-left: 10px;
 }
+
 #search-bar i {
     position: absolute;
     top: 10px;
@@ -47,4 +49,9 @@ body {
     border: none;
     cursor: pointer;
     transition: transform 0.2s ease;
+}
+
+.active-button {
+    background-color: black;
+    color: white;
 }
