--- a/news.css
+++ b/news.css
@@ -74,3 +74,19 @@ body {
     grid-column: span 2;
 }
 
+.show-button {
+    display: block;
+    margin: 0 auto 30px;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+}
+
+.show-button:hover,
+button:hover {
+    transform: scale(1.05);
+}
